--- a/lib_licences/licenseReport.html
+++ b/lib_licences/licenseReport.html
@@ -36,17 +36,22 @@
           <dt>Copyright &copy; 20xx The original author or authors</dt>
         </dl>
       </li>
-      <li><a href="#0">forge (1.16.5-36.0.42_mapped_snapshot_20201028-1.16.3)</a>
+      <li><a href="#0">forge (1.16.5-36.0.42_mapped_official_1.16.5)</a>
         <dl>
           <dt>Copyright &copy; 20xx The original author or authors</dt>
         </dl>
       </li>
-      <li><a href="#0">Grotesque Java 9 Hacks (1.3.0)</a>
+      <li><a href="#0">Grotesque Java 9 Hacks (1.3.3)</a>
         <dl>
           <dt>Copyright &copy; 20xx cpw</dt>
         </dl>
       </li>
       <li><a href="#0">javabridge (1.0.22)</a>
+        <dl>
+          <dt>Copyright &copy; 20xx The original author or authors</dt>
+        </dl>
+      </li>
+      <li><a href="#0">mappings_official (1.16.5)</a>
         <dl>
           <dt>Copyright &copy; 20xx The original author or authors</dt>
         </dl>
