--- a/lib_licences/licenseReport.html
+++ b/lib_licences/licenseReport.html
@@ -51,7 +51,7 @@
           <dt>Copyright &copy; 20xx The original author or authors</dt>
         </dl>
       </li>
-      <li><a href="#0">Mod Launcher (9.0.7)</a>
+      <li><a href="#0">Mod Launcher (9.0.24)</a>
         <dl>
           <dt>Copyright &copy; 20xx cpw</dt>
         </dl>
@@ -61,7 +61,7 @@
           <dt>Copyright &copy; 20xx The original author or authors</dt>
         </dl>
       </li>
-      <li><a href="#0">Secure Modular Jar handler (0.9.54)</a>
+      <li><a href="#0">Secure Modular Jar handler (0.9.61)</a>
         <dl>
           <dt>Copyright &copy; 20xx cpw</dt>
         </dl>
@@ -201,12 +201,12 @@
           <dt>Copyright &copy; 2005 The original author or authors</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Apache Log4j API (2.14.1)</a>
+      <li><a href="#1934118923">Apache Log4j API (2.17.1)</a>
         <dl>
           <dt>Copyright &copy; 20xx The original author or authors</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Apache Log4j Core (2.14.1)</a>
+      <li><a href="#1934118923">Apache Log4j Core (2.17.1)</a>
         <dl>
           <dt>Copyright &copy; 20xx The original author or authors</dt>
         </dl>
@@ -1055,18 +1055,18 @@ SOFTWARE.
 <a href="http://www.abego-software.de/legal/apl-v10.html">http://www.abego-software.de/legal/apl-v10.html</a></pre>
 <br>
       <hr>
-      <li><a href="#2604534">Core Mods (5.0.1)</a>
+      <li><a href="#2604534">Core Mods (5.0.2)</a>
         <dl>
           <dt>Copyright &copy; 20xx cpw</dt>
         </dl>
       </li>
-      <li><a href="#2604534">Event Bus (5.0.3)</a>
+      <li><a href="#2604534">Event Bus (5.0.7)</a>
         <dl>
           <dt>Copyright &copy; 20xx cpw</dt>
           <dt>Copyright &copy; 20xx LexManos</dt>
         </dl>
       </li>
-      <li><a href="#2604534">Forge Service Provider Interface (4.0.10)</a>
+      <li><a href="#2604534">Forge Service Provider Interface (4.0.15-4.x)</a>
         <dl>
           <dt>Copyright &copy; 20xx cpw</dt>
         </dl>
